Fixed swagger annotations
