# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  contact-list_internal_domain.Contact:
+  github_com_wilfridterry_contact-list_internal_domain.Contact:
     properties:
       address:
         type: string
@@ -21,7 +21,7 @@ definitions:
       updated_at:
         type: string
     type: object
-  contact-list_internal_domain.SaveInputContact:
+  github_com_wilfridterry_contact-list_internal_domain.SaveInputContact:
     properties:
       address:
         type: string
@@ -43,13 +43,33 @@ definitions:
     - name
     - phone
     type: object
-  contact-list_internal_domain.UserSignUp:
+  github_com_wilfridterry_contact-list_internal_domain.SignInInput:
     properties:
       email:
-        type: string
-      name:
+        maxLength: 255
+        minLength: 4
         type: string
       password:
+        maxLength: 70
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  github_com_wilfridterry_contact-list_internal_domain.SignUpInput:
+    properties:
+      email:
+        maxLength: 255
+        minLength: 4
+        type: string
+      name:
+        maxLength: 255
+        minLength: 2
+        type: string
+      password:
+        maxLength: 70
+        minLength: 6
         type: string
     required:
     - email
@@ -76,6 +96,31 @@ info:
   title: Swagger Contacts API
   version: "1.0"
 paths:
+  /auth/sign-in:
+    get:
+      consumes:
+      - application/json
+      description: refresh tokens for auth
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: refresh tokens
+      tags:
+      - auth
   /auth/sign-up:
     post:
       consumes:
@@ -87,7 +132,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/contact-list_internal_domain.UserSignUp'
+          $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.SignUpInput'
       produces:
       - application/json
       responses:
@@ -120,7 +165,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/contact-list_internal_domain.Contact'
+              $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.Contact'
             type: array
         "400":
           description: Bad Request
@@ -147,7 +192,7 @@ paths:
         name: contact
         required: true
         schema:
-          $ref: '#/definitions/contact-list_internal_domain.SaveInputContact'
+          $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.SaveInputContact'
       produces:
       - application/json
       responses:
@@ -215,7 +260,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/contact-list_internal_domain.Contact'
+            $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.Contact'
         "400":
           description: Bad Request
           schema:
@@ -241,7 +286,7 @@ paths:
         name: contact
         required: true
         schema:
-          $ref: '#/definitions/contact-list_internal_domain.SaveInputContact'
+          $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.SaveInputContact'
       - description: Contact ID
         in: path
         name: id
@@ -253,7 +298,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/contact-list_internal_domain.Contact'
+            $ref: '#/definitions/github_com_wilfridterry_contact-list_internal_domain.Contact'
         "400":
           description: Bad Request
           schema:
